--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
     <meta http-equiv="refresh" content="0; URL=/" />
     <script>
       sessionStorage.redirect = location.href;
+      location.href = "/Bootcamp-Blog/";
     </script>
   </head>
   <body>
