--- a/404.html
+++ b/404.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <title>Redirecting to /</title>
-    <meta http-equiv="refresh" content="0; URL=/" />
     <script>
       sessionStorage.redirect = location.href;
-      location.href = "/Bootcamp-Blog/";
     </script>
+    <meta http-equiv="refresh" content="0; URL=/Bootcamp-Blog" />
   </head>
   <body>
-    If you are not redirected, <a href="/">click here</a>.
+    If you are not redirected, <a href="/Bootcamp-Blog">click here</a>.
   </body>
 </html>
