--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <script>
       sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0; URL=/Bootcamp-Blog" />
+    <meta http-equiv="refresh" content="0; URL=/Bootcamp-Blog/add-blog" />
   </head>
   <body>
     If you are not redirected, <a href="/Bootcamp-Blog">click here</a>.
