--- a/404.html
+++ b/404.html
@@ -4,11 +4,32 @@
     <meta charset="utf-8" />
     <title>Redirecting to /</title>
     <script>
-      sessionStorage.redirect = location.href;
+      var segmentCount = 1;
+      var l = window.location;
+      l.replace(
+        l.protocol +
+          "//" +
+          l.hostname +
+          (l.port ? ":" + l.port : "") +
+          l.pathname
+            .split("/")
+            .slice(0, 1 + segmentCount)
+            .join("/") +
+          "/?p=" +
+          l.pathname
+            .slice(1)
+            .split("/")
+            .slice(segmentCount)
+            .join("/")
+            .replace(/&/g, "~and~") +
+          (l.search ? "&q=" + l.search.slice(1).replace(/&/g, "~and~") : "") +
+          l.hash
+      );
     </script>
-    <meta http-equiv="refresh" content="0; URL=/Bootcamp-Blog/add-blog" />
+
+    <!-- <meta http-equiv="refresh" content="0; URL=/Bootcamxp-Blog" /> -->
   </head>
   <body>
-    If you are not redirected, <a href="/Bootcamp-Blog">click here</a>.
+    If you are not redirected, <a href="/">click here</a>.
   </body>
 </html>
