--- a/404.html
+++ b/404.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Redirecting to /</title>
-    <script>
-      var segmentCount = 1;
+    <title>Single Page Apps for GitHub Pages</title>
+    <script type="text/javascript">
+      var pathSegmentsToKeep = 1;
+
       var l = window.location;
       l.replace(
         l.protocol +
@@ -13,23 +14,19 @@
           (l.port ? ":" + l.port : "") +
           l.pathname
             .split("/")
-            .slice(0, 1 + segmentCount)
+            .slice(0, 1 + pathSegmentsToKeep)
             .join("/") +
-          "/?p=" +
+          "/?/" +
           l.pathname
             .slice(1)
             .split("/")
-            .slice(segmentCount)
+            .slice(pathSegmentsToKeep)
             .join("/")
             .replace(/&/g, "~and~") +
-          (l.search ? "&q=" + l.search.slice(1).replace(/&/g, "~and~") : "") +
+          (l.search ? "&" + l.search.slice(1).replace(/&/g, "~and~") : "") +
           l.hash
       );
     </script>
-
-    <!-- <meta http-equiv="refresh" content="0; URL=/Bootcamxp-Blog" /> -->
   </head>
-  <body>
-    If you are not redirected, <a href="/">click here</a>.
-  </body>
+  <body></body>
 </html>
